--- a/index.html
+++ b/index.html
@@ -1,26 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Flexbox practice</title>
     <link rel="stylesheet" href="./css/main.css">
-    <script src=".script/index.js"></script>
+    <meta property=”og:url” content=”https://tusitio.com/marketing-de-contenidos” />
 </head>
-<body> 
-    <div class="header">
-         <div>
+
+<body>
+    <header class="header">
+        <div>
             <hi>logo</hi>
         </div>
 
         <div class="menu">
-           <ul>
+            <ul>
                 <li>Texto-1</li>
                 <li>Texto-2</li>
                 <li>Texto-3</li>
-           </ul>
+            </ul>
         </div>
-    </div>
+    </header>
 
     <div class="bannerdesign">
     </div>
@@ -32,23 +34,25 @@
                 <div class="textotarjeta">
                     <h3>Tutulo</h3>
                     <p>Lorem ipsum dolor sit amet.
-                    Aut repellendus impedit non Quis cupiditate
-                    sed suscipit dolores aut perferendis delectus
-                    sit nihil aliquid id reprehenderit rerum!</p>
+                        Aut repellendus impedit non Quis cupiditate
+                        sed suscipit dolores aut perferendis delectus
+                        sit nihil aliquid id reprehenderit rerum!</p>
                 </div>
-            
+
             </div>
 
             <div class="tarjetacontenedor">
-                <div class="imagen"> </div>
-                <div class="textotarjeta">
-                <h3>Tutulo</h3>
-                <p>Lorem ipsum dolor sit amet.
-                    Aut repellendus impedit non Quis cupiditate
-                    sed suscipit dolores aut perferendis delectus
-                    sit nihil aliquid id reprehenderit rerum!</p>
+                <div class="imagen">
+
                 </div>
-             </div>
+                <div class="textotarjeta">
+                    <h3>Tutulo</h3>
+                    <p>Lorem ipsum dolor sit amet.
+                        Aut repellendus impedit non Quis cupiditate
+                        sed suscipit dolores aut perferendis delectus
+                        sit nihil aliquid id reprehenderit rerum!</p>
+                </div>
+            </div>
 
             <div class="tarjetacontenedor">
                 <div class="imagen"> </div>
@@ -65,31 +69,31 @@
     <footer classs="piedepagina">
         <div class="contenedor">
             <div class="secciones">
-            <span>seccion</span>
-            <ul>
-                <li>uno</li>
-                <li>dos</li>
-                <li>tres</li>
-            </ul>
+                <span>seccion</span>
+                <ul>
+                    <li>uno</li>
+                    <li>dos</li>
+                    <li>tres</li>
+                </ul>
             </div>
             <div class="secciones">
-            <span>seccion</span>
-            <ul>
-                <li>uno</li>
-                <li>dos</li>
-                <li>tres</li>
-            </ul>
+                <span>seccion</span>
+                <ul>
+                    <li>uno</li>
+                    <li>dos</li>
+                    <li>tres</li>
+                </ul>
             </div>
             <div class="secciones">
-            <span>seccion</span>
-            <ul>
-                <li>uno</li>
-                <li>dos</li>
-                <li>tres</li>
-            </ul>
+                <span>seccion</span>
+                <ul>
+                    <li>uno</li>
+                    <li>dos</li>
+                    <li>tres</li>
+                </ul>
             </div>
         </div>
-
     </footer>
 </body>
+
 </html>
